--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0022.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0022.html
@@ -156,8 +156,7 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1020 337 1097 374">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">llui;</ins>
-            <del title="nlp 0.90">llui;</del>
+            <ins title="nlp 2.00">Πῶς</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1123 348 1298 382" lang="grc">
@@ -288,8 +287,7 @@
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1801 391 1838 422">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ki</ins>
-            <del title="nlp 0.90">Ki</del>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 1865 399 2023 432" lang="grc">
@@ -299,16 +297,11 @@
         </span>
         <span id="w_53" class="ocr_word" title="bbox 2051 389 2150 422" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπου-</ins>
+            <ins title="nlp 2.00">ἐπουσιωδῶν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 446 2115 501">
-        <span id="w_54" class="ocr_word" title="bbox 331 462 461 491" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σιωδῶν</ins>
-          </span>
-        </span>
         <span id="w_55" class="ocr_word" title="bbox 488 457 504 501">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">II</ins>
@@ -322,7 +315,7 @@
         </span>
         <span id="w_57" class="ocr_word" title="bbox 611 457 710 490" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">18καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 736 466 834 490" lang="grc">
@@ -707,7 +700,7 @@
         </span>
         <span id="w_129" class="ocr_word" title="bbox 997 690 1094 730" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πῶς)</ins>
+            <ins title="nlp 2.00">πῶς)</ins>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1152 687 1244 721" lang="grc">
@@ -1447,8 +1440,7 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 471 1218 534 1252">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lOv</ins>
-            <del title="nlp 0.90">lOv</del>
+            <ins title="nlp 2.00">19v</ins>
           </span>
         </span>
         <span id="w_269" class="ocr_word" title="bbox 567 1218 615 1252">
@@ -1874,8 +1866,7 @@
         </span>
         <span id="w_348" class="ocr_word" title="bbox 513 1511 529 1558">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Jl</ins>
-            <del title="nlp 0.90">Jl</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_349" class="ocr_word" title="bbox 559 1513 590 1546">
@@ -1966,8 +1957,7 @@
         </span>
         <span id="w_365" class="ocr_word" title="bbox 452 1571 727 1615">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">MoNACENSis</ins>
-            <del title="nlp 0.90">MoNACENSis</del>
+            <ins title="nlp 2.00">Monacensis</ins>
           </span>
         </span>
         <span id="w_366" class="ocr_word" title="bbox 757 1571 838 1613">
@@ -2212,7 +2202,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 2011 1788 2156 1829">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">super-</ins>
+            <ins title="nlp 2.00">supersedi,</ins>
           </span>
         </span>
       </span>
@@ -2374,7 +2364,7 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 862 2052 932 2108" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[Η.</ins>
+            <ins title="nlp 2.00">Η.</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 956 2051 1111 2094">
@@ -2432,9 +2422,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_442" class="ocr_word" title="bbox 404 2125 423 2165">
+        <span id="w_442_0" class="ocr_word" title="bbox 404 2125 423 2165">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">1—20r</ins>
+          </span>
+        </span>
+        <span id="w_442_1" class="ocr_word" title="bbox 404 2125 423 2165">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_445" class="ocr_word" title="bbox 587 2123 891 2176">
@@ -2479,24 +2474,13 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_452" class="ocr_word" title="bbox 1851 2123 1871 2162">
+        <span id="w_452_0" class="ocr_word" title="bbox 1851 2123 1871 2162">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">1—35</ins>
           </span>
         </span>
-        <span id="w_455" class="ocr_word" title="bbox 2011 2122 2156 2174">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">leguu-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 341 2191 2155 2244">
-        <span id="w_456" class="ocr_word" title="bbox 341 2198 420 2244">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur,</ins>
-            <del title="nlp 0.90">leguutur,</del>
-          </span>
-        </span>
         <span id="w_457" class="ocr_word" title="bbox 453 2191 675 2244">
           <span class="alternatives">
             <ins title="nlp 2.00">exhibet1).</ins>
