--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0076.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0076.html
@@ -366,7 +366,7 @@
         </span>
         <span id="w_69" class="ocr_word" title="bbox 1579 637 1663 692" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1702 638 1822 692" lang="grc">
@@ -718,7 +718,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1133 1052 1264 1106" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 1301 1067 1372 1106" lang="grc">
@@ -1631,7 +1631,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 739 2018 833 2072" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶν</ins>
+            <ins title="nlp 2.00">(πᾶν</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 865 2033 937 2072" lang="grc">
@@ -2476,9 +2476,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_477" class="ocr_word" title="bbox 743 3245 862 3288">
+        <span id="w_477_0" class="ocr_word" title="bbox 743 3245 862 3288">
           <span class="alternatives">
-            <ins title="nlp 2.00">38,1G)</ins>
+            <ins class="alt" title="nlp 2.00">38,</ins>
+          </span>
+        </span>
+        <span id="w_477_1" class="ocr_word" title="bbox 743 3245 862 3288">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">16)</ins>
           </span>
         </span>
         <span id="w_478" class="ocr_word" title="bbox 1053 3248 1221 3282" lang="grc">
