--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0111.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0111.html
@@ -1499,9 +1499,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 866 1985 1150 2046">
-        <span id="w_294" class="ocr_word" title="bbox 866 1989 1026 2046">
+        <span id="w_294_0" class="ocr_word" title="bbox 866 1989 1026 2046">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κε΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_294_1" class="ocr_word" title="bbox 866 1989 1026 2046">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κε'&amp;003E;</ins>
           </span>
         </span>
       </span>
@@ -1513,8 +1518,7 @@
         </span>
         <span id="w_297" class="ocr_word" title="bbox 178 2141 210 2174">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 229 2130 310 2171">
@@ -1613,7 +1617,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1449 2288 1511 2340" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">(τὸ</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1543 2287 1612 2341" lang="grc">
