--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0077.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0077.html
@@ -758,7 +758,7 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1196 1021 1250 1074" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰ</ins>
+            <ins title="nlp 2.00">(εἰ</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1290 1021 1362 1075" lang="grc">
@@ -835,7 +835,7 @@
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1369 1090 1510 1144" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάσαι</ins>
+            <ins title="nlp 2.00">(πᾶσαι</ins>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 1540 1087 1612 1142" lang="grc">
@@ -2699,8 +2699,7 @@
         </span>
         <span id="w_521" class="ocr_word" title="bbox 1335 3151 1450 3183">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aduot.</ins>
-            <del title="nlp 0.90">aduot.</del>
+            <ins title="nlp 2.00">adnot.</ins>
           </span>
         </span>
         <span id="w_522" class="ocr_word" title="bbox 1461 3149 1487 3181" lang="grc">
