--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0112.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0112.html
@@ -124,7 +124,7 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 2103 247 2161 271">
           <span class="alternatives">
-            <ins title="nlp 2.00">77ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
