--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0023.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0023.html
@@ -113,8 +113,7 @@
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1413 268 1432 299">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G</ins>
-            <del title="nlp 0.90">G</del>
+            <ins title="nlp 2.00">6</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1460 280 1544 312" lang="grc">
@@ -220,7 +219,7 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1327 327 1371 360">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">li-</ins>
+            <ins title="nlp 2.00">14</ins>
           </span>
         </span>
         <span id="w_39" class="ocr_word" title="bbox 1395 330 1471 370">
@@ -253,20 +252,14 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1834 337 1917 371" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρη-</ins>
+            <ins title="nlp 2.00">χρησίμου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 99 383 1917 438">
-        <span id="w_45" class="ocr_word" title="bbox 99 407 193 438" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σίμου</ins>
-          </span>
-        </span>
         <span id="w_46" class="ocr_word" title="bbox 222 392 236 438">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 266 394 464 428" lang="grc">
@@ -297,8 +290,7 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 1024 387 1096 429">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(lH)</ins>
-            <del title="nlp 0.90">(lH</del>
+            <ins title="nlp 2.00">(19)</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1116 398 1182 419">
@@ -536,15 +528,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 556 1916 614">
-        <span id="w_99" class="ocr_word" title="bbox 105 590 137 594" lang="grc">
+        <span id="w_99_0" class="ocr_word" title="bbox 105 590 137 594">
           <span class="alternatives">
-            <ins title="nlp 2.00">τρόπον</ins>
+            <ins class="alt" title="nlp 2.00">—τρόπον</ins>
+          </span>
+        </span>
+        <span id="w_99_1" class="ocr_word" title="bbox 105 590 137 594">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 295 567 367 610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(IG)</ins>
-            <del title="nlp 0.90">(IG</del>
+            <ins title="nlp 2.00">(16)</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 393 578 457 600">
@@ -623,11 +619,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 1900 556 1916 603">
-          <span class="alternatives">
-            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
       </span>
@@ -1167,8 +1158,7 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 266 977 281 1024">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 311 978 365 1011">
@@ -1535,8 +1525,7 @@
       <span class="ocr_line" title="bbox 108 1197 1925 1257">
         <span id="w_288" class="ocr_word" title="bbox 108 1216 145 1247">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IG</ins>
-            <del title="nlp 0.90">IG</del>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 173 1225 241 1247" lang="grc">
@@ -1831,7 +1820,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 447 1392 533 1437">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">03,6</ins>
+            <ins title="nlp 2.00">63,6</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 556 1390 812 1438" lang="grc">
@@ -3300,14 +3289,12 @@
         </span>
         <span id="w_622" class="ocr_word" title="bbox 192 2369 256 2392">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_623" class="ocr_word" title="bbox 285 2358 299 2405">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_624" class="ocr_word" title="bbox 330 2358 362 2391">
@@ -3368,7 +3355,7 @@
         </span>
         <span id="w_635" class="ocr_word" title="bbox 1260 2349 1277 2396" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">1,2 ἦλθεν|| 2καὶ ἐπὶ om. || ἢ—ἄλλως]</ins>
+            <ins title="nlp 2.00">ἦλθεν|| 2καὶ ἐπὶ om. || ἢ—ἄλλως]</ins>
           </span>
         </span>
       </span>
@@ -3578,8 +3565,7 @@
         </span>
         <span id="w_676" class="ocr_word" title="bbox 306 2532 320 2579">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_677" class="ocr_word" title="bbox 355 2533 394 2566">
@@ -3671,8 +3657,7 @@
         </span>
         <span id="w_694" class="ocr_word" title="bbox 235 2591 250 2638">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_695" class="ocr_word" title="bbox 278 2592 316 2625" lang="grc">
@@ -3748,7 +3733,7 @@
         </span>
         <span id="w_709" class="ocr_word" title="bbox 1667 2580 1707 2613">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">17</ins>
+            <ins title="nlp 2.00">|| 17</ins>
           </span>
         </span>
         <span id="w_710" class="ocr_word" title="bbox 1735 2590 1935 2623" lang="grc">
@@ -3765,8 +3750,7 @@
         </span>
         <span id="w_712" class="ocr_word" title="bbox 209 2650 224 2697">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_713" class="ocr_word" title="bbox 252 2651 318 2696" lang="grc">
@@ -4052,8 +4036,7 @@
         </span>
         <span id="w_766" class="ocr_word" title="bbox 279 2824 294 2872">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_767" class="ocr_word" title="bbox 324 2826 378 2860">
