--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0152.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0152.html
@@ -1687,7 +1687,7 @@
       <span class="ocr_line" title="bbox 433 2455 2114 2513">
         <span id="w_327" class="ocr_word" title="bbox 433 2457 544 2513">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τῶν&amp;x003E;</ins>
+            <ins title="nlp 2.00">x003E;</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 583 2473 651 2498" lang="grc">
