--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0113.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0113.html
@@ -814,7 +814,7 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 1836 1102 1900 1137">
           <span class="alternatives">
-            <ins title="nlp 2.00">78ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1486,9 +1486,14 @@
             <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 833 2052 1020 2107">
+        <span id="w_289_0" class="ocr_word" title="bbox 833 2052 1020 2107">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις κς΄&amp;#x003Ε;.</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_289_1" class="ocr_word" title="bbox 833 2052 1020 2107">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κζ'&amp;003E;.</ins>
           </span>
         </span>
       </span>
@@ -2241,7 +2246,7 @@
         </span>
         <span id="w_433" class="ocr_word" title="bbox 1265 3050 1369 3083" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">262Β</ins>
+            <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
         <span id="w_434" class="ocr_word" title="bbox 1564 3048 1602 3080">
@@ -2309,7 +2314,7 @@
         </span>
         <span id="w_445" class="ocr_word" title="bbox 869 3108 935 3142" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">256Ε</ins>
+            <ins title="nlp 2.00">Ε</ins>
           </span>
         </span>
         <span id="w_446" class="ocr_word" title="bbox 1117 3110 1228 3153" lang="grc">
