--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0153.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0153.html
@@ -460,12 +460,7 @@
       <span class="ocr_line" title="bbox 165 811 1845 874">
         <span id="w_88" class="ocr_word" title="bbox 165 813 344 861" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διανοίας,</ins>
-          </span>
-        </span>
-        <span id="w_89" class="ocr_word" title="bbox 377 811 470 866" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἀπὸ δὲ διανοίας&amp;x003E;</ins>
+            <ins title="nlp 2.00">διανοίας, &lt;ἀπὸ δὲ διανοίας&gt;</ins>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 794 830 818 867" lang="grc">
@@ -2402,7 +2397,7 @@
         </span>
         <span id="w_463" class="ocr_word" title="bbox 1588 2997 1631 3019" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">an ὁ Περιπάτου?</ins>
+            <ins title="nlp 2.00">ὁ Περιπάτου?</ins>
           </span>
         </span>
       </span>
@@ -2605,7 +2600,7 @@
         </span>
         <span id="w_500" class="ocr_word" title="bbox 1146 3172 1180 3193">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἡ om)</ins>
+            <ins title="nlp 2.00">ἡ om)</ins>
           </span>
         </span>
         <span id="w_503" class="ocr_word" title="bbox 1356 3161 1440 3194">
