--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0079.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0079.html
@@ -484,7 +484,7 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1476 797 1684 852" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπόγονος</ins>
+            <ins title="nlp 2.00">(ἀπόγονος</ins>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1709 812 1782 851" lang="grc">
@@ -1606,16 +1606,11 @@
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1786 2258 1861 2283" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δια-</ins>
+            <ins title="nlp 2.00">διαφορὰ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 185 2320 1860 2377">
-        <span id="w_311" class="ocr_word" title="bbox 185 2339 283 2377" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φορὰ</ins>
-          </span>
-        </span>
         <span id="w_312" class="ocr_word" title="bbox 315 2324 501 2377" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διάκρισίς</ins>
