--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0154.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0154.html
@@ -1304,9 +1304,14 @@
             <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 399 1896 724 1950" lang="grc">
+        <span id="w_250_0" class="ocr_word" title="bbox 399 1896 724 1950">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἀναγκαστικοῖς,</ins>
+            <ins class="alt" title="nlp 2.00">&lt;ἀναγκαστικοῖς,</ins>
+          </span>
+        </span>
+        <span id="w_250_1" class="ocr_word" title="bbox 399 1896 724 1950">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_251" class="ocr_word" title="bbox 771 1912 810 1936" lang="grc">
@@ -1324,9 +1329,14 @@
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 1049 1894 1296 1949" lang="grc">
+        <span id="w_254_0" class="ocr_word" title="bbox 1049 1894 1296 1949">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαλογικοῖς&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">διαλογικοῖς&gt;</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 1049 1894 1296 1949">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 1333 1895 1509 1939" lang="grc">
@@ -1337,16 +1347,6 @@
         <span id="w_256" class="ocr_word" title="bbox 1546 1910 1734 1948" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κέχρηται</ins>
-          </span>
-        </span>
-        <span id="w_257" class="ocr_word" title="bbox 1771 1896 1911 1949" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγοις.</ins>
-          </span>
-        </span>
-        <span id="w_258" class="ocr_word" title="bbox 1972 1910 2083 1935" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κατασκευάζων</ins>
           </span>
         </span>
       </span>
