--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0024.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0024.html
@@ -219,8 +219,7 @@
       <span class="ocr_line" title="bbox 359 324 691 371">
         <span id="w_39" class="ocr_word" title="bbox 359 326 397 358">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yi</ins>
-            <del title="nlp 0.90">yi</del>
+            <ins title="nlp 2.00">31</ins>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 430 324 572 371" lang="grc">
@@ -248,8 +247,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 576 383 624 416">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Kl.</ins>
-            <del title="nlp 0.90">Kl.</del>
+            <ins title="nlp 2.00">El.</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 654 392 689 425" lang="grc">
@@ -314,8 +312,7 @@
         </span>
         <span id="w_57" class="ocr_word" title="bbox 1806 378 1838 409">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1872 389 1972 420" lang="grc">
@@ -373,8 +370,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 858 440 874 485">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jl</ins>
-            <del title="nlp 0.90">jl</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 909 442 947 474">
@@ -430,12 +426,12 @@
         </span>
         <span id="w_79" class="ocr_word" title="bbox 1890 436 1932 468">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2(1</ins>
+            <ins title="nlp 2.00">|| 26</ins>
           </span>
         </span>
         <span id="w_80" class="ocr_word" title="bbox 1960 435 1976 468">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1996 446 2061 468">
@@ -481,8 +477,7 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 562 559 609 591">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">HI.</ins>
-            <del title="nlp 0.90">HI.</del>
+            <ins title="nlp 2.00">El.</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 637 568 673 602">
@@ -528,8 +523,7 @@
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1593 554 1608 599">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1652 555 1687 587">
@@ -704,8 +698,7 @@
         </span>
         <span id="w_131" class="ocr_word" title="bbox 493 735 532 766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(Jr</ins>
-            <del title="nlp 0.90">(Jr</del>
+            <ins title="nlp 2.00">6r</ins>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 563 733 612 766">
@@ -2307,9 +2300,14 @@
             <ins title="nlp 2.00">95,5</ins>
           </span>
         </span>
-        <span id="w_443" class="ocr_word" title="bbox 786 1735 951 1783" lang="grc">
+        <span id="w_443_0" class="ocr_word" title="bbox 786 1735 951 1783">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἐπειδὴ)</ins>
+            <ins class="alt" title="nlp 2.00">(Ἐπειδὴ)</ins>
+          </span>
+        </span>
+        <span id="w_443_1" class="ocr_word" title="bbox 786 1735 951 1783">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_444" class="ocr_word" title="bbox 978 1739 1011 1771" lang="grc">
@@ -2381,11 +2379,6 @@
         <span id="w_457" class="ocr_word" title="bbox 2010 1740 2051 1773">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">10</ins>
-          </span>
-        </span>
-        <span id="w_458" class="ocr_word" title="bbox 2077 1740 2163 1773" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔστιν</ins>
           </span>
         </span>
       </span>
@@ -2600,7 +2593,7 @@
         </span>
         <span id="w_498" class="ocr_word" title="bbox 884 1914 922 1947" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">|| 14 δεῖ]</ins>
+            <ins title="nlp 2.00">δεῖ]</ins>
           </span>
         </span>
         <span id="w_499" class="ocr_word" title="bbox 1077 1914 1092 1959">
@@ -3537,7 +3530,7 @@
       <span class="ocr_line" title="bbox 334 2501 2156 2555">
         <span id="w_677" class="ocr_word" title="bbox 334 2501 380 2536" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">30 καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_678" class="ocr_word" title="bbox 580 2513 646 2536">
