--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0080.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0080.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 1097 937 1364 995">
         <span id="w_0" class="ocr_word" title="bbox 1097 939 1256 995" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;Πρᾶξις ις'&amp;003E; .</ins>
+            <ins title="nlp 2.00">003E; .</ins>
           </span>
         </span>
       </span>
@@ -1601,8 +1601,7 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1296 3093 1433 3127">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Uesiod.</ins>
-            <del title="nlp 0.90">Uesiod.</del>
+            <ins title="nlp 2.00">Hesiod.</ins>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1461 3094 1591 3138">
