--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0114.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0114.html
@@ -51,7 +51,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1609 136 1833 181">
           <span class="alternatives">
-            <ins title="nlp 2.00">6,12—6,16)</ins>
+            <ins title="nlp 2.00">—6,16)</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1862 147 1889 170">
@@ -271,7 +271,7 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 502 660 581 693">
           <span class="alternatives">
-            <ins title="nlp 2.00">6,12 Τὰ</ins>
+            <ins title="nlp 2.00">Τὰ</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 632 646 696 688" lang="grc">
