--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0081.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0081.html
@@ -195,7 +195,7 @@
         </span>
         <span id="w_34" class="ocr_word" title="bbox 716 420 889 476" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔπαινος</ins>
+            <ins title="nlp 2.00">(ἔπαινος</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 911 421 952 461" lang="grc">
@@ -711,7 +711,7 @@
         </span>
         <span id="w_138" class="ocr_word" title="bbox 1840 984 1903 1019">
           <span class="alternatives">
-            <ins title="nlp 2.00">55ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1370,16 +1370,11 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 1714 1814 1848 1855" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρησι-</ins>
+            <ins title="nlp 2.00">χρησιμεύειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 175 1872 1848 1929">
-        <span id="w_266" class="ocr_word" title="bbox 175 1891 301 1929" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεύειν</ins>
-          </span>
-        </span>
         <span id="w_267" class="ocr_word" title="bbox 334 1876 398 1916" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
