--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0157.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0157.html
@@ -2658,7 +2658,7 @@
         </span>
         <span id="w_511" class="ocr_word" title="bbox 1742 3117 1871 3159">
           <span class="alternatives">
-            <ins title="nlp 2.00">Kühn.)</ins>
+            <ins title="nlp 2.00">ühn.)</ins>
           </span>
         </span>
       </span>
