--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0084.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0084.html
@@ -1764,7 +1764,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 507 3156 599 3199" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρὸς</ins>
+            <ins title="nlp 2.00">(πρὸς</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 625 3165 659 3186" lang="grc">
