--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0025.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0025.html
@@ -100,7 +100,7 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 312 372 365 376">
           <span class="alternatives">
-            <ins title="nlp 2.00">1r—19r</ins>
+            <ins title="nlp 2.00">—19r</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 468 347 817 389">
@@ -301,19 +301,7 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 392 558 526 594">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">restat</ins>
-            <del title="nlp 0.90">restat</del>
-          </span>
-        </span>
-        <span id="w_51" class="ocr_word" title="bbox 561 554 619 606">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(p.</ins>
-            <del title="nlp 0.90">(p.</del>
-          </span>
-        </span>
-        <span id="w_52" class="ocr_word" title="bbox 646 552 797 606">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">100,28—104,12)</ins>
+            <ins title="nlp 2.00">restat (p. 100,28—104,12)</ins>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1072 551 1353 592">
@@ -336,8 +324,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1895 550 1937 590">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
       </span>
@@ -608,9 +595,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1356 824 1437 866" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 1356 824 1437 866">
           <span class="alternatives">
-            <ins title="nlp 2.00">399–433</ins>
+            <ins class="alt" title="nlp 2.00">399—433</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 1356 824 1437 866">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1606 823 1797 866">
@@ -622,12 +614,6 @@
         <span id="w_106" class="ocr_word" title="bbox 1831 824 1937 865">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">1841</ins>
-          </span>
-        </span>
-        <span id="w_107" class="ocr_word" title="bbox 1973 838 1994 865">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">c</ins>
-            <del title="nlp 0.90">c</del>
           </span>
         </span>
       </span>
@@ -715,8 +701,7 @@
       <span class="ocr_line" title="bbox 226 1417 1838 1457">
         <span id="w_121" class="ocr_word" title="bbox 226 1420 261 1456">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 289 1419 595 1457">
@@ -916,7 +901,7 @@
         </span>
         <span id="w_157" class="ocr_word" title="bbox 292 1798 369 1849">
           <span class="alternatives">
-            <ins title="nlp 2.00">2v—18r,</ins>
+            <ins title="nlp 2.00">—18r,</ins>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 403 1798 568 1840">
@@ -943,9 +928,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 1064 1822 1117 1825">
+        <span id="w_163_0" class="ocr_word" title="bbox 1064 1822 1117 1825">
           <span class="alternatives">
-            <ins title="nlp 2.00">21v—54r</ins>
+            <ins class="alt" title="nlp 2.00">21v—54r</ins>
+          </span>
+        </span>
+        <span id="w_163_1" class="ocr_word" title="bbox 1064 1822 1117 1825">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1221 1797 1490 1839">
@@ -958,12 +948,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">variisque</ins>
             <del title="nlp 0.90">variisque</del>
-          </span>
-        </span>
-        <span id="w_167" class="ocr_word" title="bbox 1749 1794 1943 1836">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">manibus</ins>
-            <del title="nlp 0.90">manibus</del>
           </span>
         </span>
       </span>
@@ -1033,17 +1017,16 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_180" class="ocr_word" title="bbox 1807 1890 1857 1894">
+        <span id="w_180_0" class="ocr_word" title="bbox 1807 1890 1857 1894">
           <span class="alternatives">
-            <ins title="nlp 2.00">2v—29r</ins>
+            <ins class="alt" title="nlp 2.00">2v—29r</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 1934 1941 1990">
         <span id="w_182" class="ocr_word" title="bbox 131 1940 404 1990">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oecupantur,</ins>
-            <del title="nlp 0.90">oecupantur,</del>
+            <ins title="nlp 2.00">occupantur,</ins>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 456 1940 652 1990">
@@ -1090,20 +1073,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 130 2002 1945 2060">
-        <span id="w_190" class="ocr_word" title="bbox 130 2008 185 2060" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(p.</ins>
-          </span>
-        </span>
-        <span id="w_191" class="ocr_word" title="bbox 212 2008 281 2047">
-          <span class="alternatives">
-            <ins title="nlp 2.00">1a1—4a19),</ins>
-          </span>
-        </span>
         <span id="w_194" class="ocr_word" title="bbox 524 2004 762 2058">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">posteriora</ins>
-            <del title="nlp 0.90">posteriora</del>
+            <ins title="nlp 2.00">(p. 1a1—4b19), posteriora</ins>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 801 2004 964 2045">
@@ -1142,9 +1114,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 1814 2027 1866 2029">
+        <span id="w_202_0" class="ocr_word" title="bbox 1814 2027 1866 2029">
           <span class="alternatives">
-            <ins title="nlp 2.00">29v—44r</ins>
+            <ins class="alt" title="nlp 2.00">29v—44r</ins>
           </span>
         </span>
       </span>
@@ -1187,8 +1159,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1448 2085 1558 2125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(juae</ins>
-            <del title="nlp 0.90">(juae</del>
+            <ins title="nlp 2.00">quae</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1575 2086 1613 2125">
@@ -1197,14 +1168,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1632 2073 1677 2112">
+        <span id="w_212_0" class="ocr_word" title="bbox 1632 2073 1677 2112">
           <span class="alternatives">
-            <ins title="nlp 2.00">4b20—</ins>
-          </span>
-        </span>
-        <span id="w_214" class="ocr_word" title="bbox 1807 2071 1944 2113">
-          <span class="alternatives">
-            <ins title="nlp 2.00">11a38</ins>
+            <ins class="alt" title="nlp 2.00">4b20—11a38</ins>
           </span>
         </span>
       </span>
@@ -1915,17 +1881,11 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1839 2906 1948 2933">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">com-</ins>
+            <ins title="nlp 2.00">compluribus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 137 2960 1947 3018">
-        <span id="w_330" class="ocr_word" title="bbox 137 2963 322 3014">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pluribus</ins>
-            <del title="nlp 0.90">compluribus</del>
-          </span>
-        </span>
         <span id="w_331" class="ocr_word" title="bbox 354 2966 672 3008">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">commentariis</ins>
