--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0201.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0201.html
@@ -1035,7 +1035,7 @@
       <span class="ocr_line" title="bbox 821 1415 1254 1471">
         <span id="w_199" class="ocr_word" title="bbox 821 1415 877 1470" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Περὶοὐσίας&amp;#x003E;.</ins>
+            <ins title="nlp 2.00">&amp;#x003C;Περὶ οὐσίας&amp;#x003E;.</ins>
           </span>
         </span>
       </span>
